Add README and chat

--- a/chat.html
+++ b/chat.html
@@ -12,6 +12,9 @@
   <div class="hello">
     <h1>{{greeting}}</h1>
   </div>
+  <a href="https://github.com/rbeene/chat-with-rooms">
+    View Source Code
+  </a>
 </template>
 
 <template name='room'>
