Add timestamps for when people enter and leave a room. Autoscroll down after entering a room

--- a/chat.html
+++ b/chat.html
@@ -26,6 +26,7 @@
       </div>
       {{> messages}}
       {{> entry}}
+      {{scroll_to_bottom_of_chat_window}}
     {{else}}
       <div id="create_room">
         <p>If you'd like to create a room, fill out this form.</p>
